--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-HOST=127.0.0.1
-PORT=3333
+HOST=adonis-produtos.herokuapp.com
+PORT=8080
 NODE_ENV=development
-APP_URL=https://adonis-produtos.herokuapp.com
+APP_URL=https://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=zEOk7xQnXMJ6pY1UCQsOQjz5B7eNc7bR
 DB_CONNECTION=mysql
