--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-HOST=adonis-produtos.herokuapp.com
+HOST=127.0.0.1
 PORT=3333
 NODE_ENV=development
-APP_URL=https://${HOST}:${PORT}
+APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=zEOk7xQnXMJ6pY1UCQsOQjz5B7eNc7bR
 DB_CONNECTION=mysql
